feat: 集成 RAG 检索增强生成能力
新增 RAG 模块（rag/）：
- ChunkingService: 中文文本智能分块（段落边界感知 + 滑动窗口重叠）
- EmbeddingClient: 调用 DeepSeek Embeddings API 生成向量
- RetrievalService: 余弦相似度 Top-K 检索
- RagContextBuilder: 将检索结果构建为 AI 对话上下文

基础设施更新：
- AiProperties: 新增 embedding 模型配置（deepseek-embed）
- AiService / DeepSeekAiService / MockAiService: 新增 embed() 方法
- NoteChunk: 文档分块实体（含 MySQL vector 存储）
- NoteChunkMapper: MyBatis-Plus Mapper

业务集成：
- ChatServiceImpl: 用户问题先检索相关知识再增强回答
- NoteServiceImpl: 笔记解析后异步构建 RAG 索引
- KnowledgeServiceImpl: 知识点生成后异步索引
- schema-mysql.sql: 新增 note_chunk 表
- application.yml: 新增 RAG 配置项

Java 17 兼容性修复：
- ChatWebSocketHandler / ChatController / KnowledgeController / QuestionController:
  Thread.ofVirtual() → new Thread()（兼容 Java 17+）